# catppuccin-cogs

./: .gitignore  flake.nix  info.json  pyproject.toml  shell.nix
autothreader/: __init__.py  autothreader.py  info.json
hornytimer/: __init__.py  hornytimer.py  info.json
