[tool.poetry]
name = "catppuccin-cogs"
version = "0.1.0"
description = "Custom cogs for Pepperjack"
authors = ["winston <hey@winston.sh>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
red-discordbot = ">=3.5.2,<=3.6.0"
humanfriendly = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
